--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         </div>
 
-        <h2>Chá fralda (P,M ou G) </h2>
+        <h2>Chá de fralda (P,M ou G) </h2>
         <h1>Lina Maria</h1>
         <div class="setas"><img src="img/transparent-heart-arrow-cute-hand-drawn-arrow-5f26b73ba43473 1 1.png" alt=""></div>
 
