--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convite lina</title>
 <meta property="og:title" content="chafraldalina" />
-<meta property="og:image" content="img/capacha.png" />
+<meta property="og:image" content="img/capacha.PNG"/>
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
