--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convite lina</title>
-<meta property="og:title" content="chafraldalina" />
+<meta property="og:title" content="cha de fralda da lina" />
 <meta property="og:image" content="img/capacha.PNG"/>
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
